--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,20 @@ services:
     networks:
       - default
 
+  app:
+    build:
+      context: ./app
+      dockerfile: Dockerfile.app
+    ports:
+      - "3000:3000"
+    expose:
+      - 3000
+    restart: on-failure
+    environment:
+        - API_URL=http://api:9000
+    networks:
+      - default
+
   db:
     image: mysql
     ports: 
