fix: add date validation

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,6 @@
 APP_PORT=9000
 
 DATABASE_HOST='db'
-DATABASE_NAME='superplayer'
+DATABASE_NAME='taskmanager'
 DATABASE_USERNAME='root'
-DATABASE_PASSWORD='superplayer123'
+DATABASE_PASSWORD='taskmanager123'
