--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.3.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "prettier": "^2.4.1",
     "typescript": "4.4.2"
   }
 }
