--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,11 @@ services:
       context: ./api
       dockerfile: Dockerfile.api
     ports:
-      - "9000:9000"
+      - "9002:9000"
     expose:
-      - 9000
+      - 9002
+    volumes:
+      - ./api/.env:/usr/src/app/.env
     restart: on-failure
     working_dir: /usr/src/app
     networks:
@@ -18,21 +20,28 @@ services:
     build:
       context: ./app
       dockerfile: Dockerfile.app
+    volumes:
+      - ./app/.env:/app/.env
     ports:
-      - "3000:3000"
+      - "3002:3000"
     expose:
-      - 3000
+      - 3002
     restart: on-failure
     networks:
       - default
 
   db:
     image: mysql
+    platform: linux/amd64
+    command: --default-authentication-plugin=mysql_native_password
     ports: 
       - "3306:3306"
     environment:
+      MYSQL_ROOT_HOST: '%'
+      MYSQL_USER: taskmanager
       MYSQL_DATABASE: taskmanager
       MYSQL_ROOT_PASSWORD: taskmanager123
+      MYSQL_PASSWORD: taskmanager123
     networks:
       - default
 
